bluec-tests/tests/valid/types_float/multi/extern_float_client.c
/* Test linking against a float defined in another file */
extern float f;

int main(void) {
    return f == 1e10;
}