bluec-tests/tests/invalid/types_float/invalid_type_specifier.c
int main(void) {
    /* "Unsigned float" is not a valid type specifier */
    unsigned float f = 10.0f;
    return 0;
}